# document-management

./: .editorconfig  .flaskenv  .gitignore  package-lock.json  pyproject.toml  readme.md  requirements.txt
dms/: __init__.py  config.py  models.py
dms/api/: __init__.py  assessment.py  author.py  display_upload_api.py  document.py  logger.py  result.py  schemas.py  session.py  submission.py  user.py  user_api.py
dms/templates/: base.html  dashboard.html
dms/templates/auth/: forgot-password.html  login.html  register.html  reset-password.html
dms/templates/document/: upload.html
docs/: api.md  api_unimpl.txt  erd.puml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  index.css
frontend/src/components/: FileDisplay.tsx  Form.tsx  NavigationBar.tsx  PopUpPanel.tsx  ProtectedRoute.tsx  Schemas.tsx
frontend/src/pages/: AuthenticationPage.tsx  CreateAssessment.tsx  CreateSubmission.tsx  Dashboard.tsx  DocumentProcessing.tsx  Home.tsx  NotFound.tsx  Profile.tsx
tests/: conftest.py  data.sql  test_assessment.py  test_author.py  test_document.py  test_factory.py  test_models.py  test_results.py  test_session.py  test_submission.py  test_user.py  test_workflow.py  utils.py
