[project]
name = "dms"
dynamic = ["version"]
description = 'FIT3161/62 CS09 project'
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dms/__about__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["dms"]